INTYGFV-15572: Changed encryption from hex to base64 encoded.